add google calendar

--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 app_ports=5000:80
 work_dir=/app
 timezone=Europe/London
-redis_url=redis://redis:6379
-redis_port=6379:6379
 code_source=./backend
+gapi_secret_file=C:\Users\ivolochkov\YandexDisk\calendar.json
+gapi_secret_path=/app/secrets/gapi_secret.json
