--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -4,3 +4,7 @@ gevent==21.8.0
 jinja2==3.0.3
 itsdangerous==2.0.1
 werkzeug==2.0.3
+
+google-api-python-client==2.83.0
+google-auth-httplib2==0.1.0
+google-auth-oauthlib==0.1.0
