add events feed

--- a/.env
+++ b/.env
@@ -4,3 +4,4 @@ timezone=Europe/London
 code_source=./backend
 gapi_secret_file=C:\Users\ivolochkov\YandexDisk\calendar.json
 gapi_secret_path=/app/secrets/gapi_secret.json
+data_source=C:\Users\ivolochkov\YandexDisk\app data\project manager
