--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -3,4 +3,4 @@ FROM python:3.9.16-slim-bullseye
 COPY requirements.txt /
 RUN pip3 install --no-cache-dir -r /requirements.txt
 
-WORKDIR /app
+WORKDIR /app/backend
