--- a/.env
+++ b/.env
@@ -2,6 +2,7 @@ app_ports=5000:80
 work_dir=/app
 timezone=Europe/London
 code_source=./backend
-gapi_secret_file=C:\Users\ivolochkov\YandexDisk\calendar.json
+gapi_secret_file=C:\Users\volochkov\Downloads\calendar.json
 gapi_secret_path=/app/secrets/gapi_secret.json
-data_source=C:\Users\ivolochkov\YandexDisk\app data\project manager
+data_source=C:\Users\volochkov\Downloads\app data\project manager
+logs_dir=C:\Users\volochkov\Downloads\app data\logs
