--- a/.env
+++ b/.env
@@ -5,4 +5,4 @@ code_source=./backend
 gapi_secret_file=C:\Users\volochkov\Downloads\calendar.json
 gapi_secret_path=/app/secrets/gapi_secret.json
 data_source=C:\Users\volochkov\Downloads\app data\project manager
-logs_dir=C:\Users\volochkov\Downloads\app data\logs
+logs_dir=C:\Users\volochkov\Downloads\logs
